more progress soon the macro should be finished in bout 3 days trust